# OpenMultimedia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  complete_installation_files.ps1  inno_setup_install_generator.iss.in
AndroidStudio/CameraStreamer/: .gitignore  settings.gradle
AndroidStudio/CameraStreamer/app/: build.gradle
AndroidStudio/CameraStreamer/app/src/main/: AndroidManifest.xml
AndroidStudio/CameraStreamer/app/src/main/java/goodapps/camerastreamer/: CameraStreamingGLViewActivity.java  SplashActivity.java  StreamingConfigurationActivity.java
AndroidStudio/CameraStreamer/app/src/main/java/goodapps/camerastreamer/camera/: CameraHelper.java  CameraReference.java  ConfigurationData.java
AndroidStudio/CameraStreamer/app/src/main/java/goodapps/camerastreamer/codec/: HardwareEncoderHelper.java  VideoEncoder.java
AndroidStudio/CameraStreamer/app/src/main/java/goodapps/camerastreamer/gl/: GLHelper.java  GLRendererCamera.java  GLRendererYUV2RGB.java  GLShader.java  GLShaderColor.java  GLShaderRGB.java  GLShaderYUV2RGB.java  GLSphere.java  GLSquare.java  GLTexture.java  GLView.java
AndroidStudio/CameraStreamer/app/src/main/java/goodapps/camerastreamer/gl/math/: Conversion.java  Vector3.java
AndroidStudio/CameraStreamer/app/src/main/java/network/: NetworkConstants.java  NetworkHelper.java  StreamDiscovering.java  StreamTCPServer.java
AndroidStudio/CameraStreamer/app/src/main/java/network/core/: SocketUDPMulticastSend.java
AndroidStudio/CameraStreamer/app/src/main/java/util/: ObjectBuffer.java  ObjectPool.java  ObjectQueue.java
AndroidStudio/CameraStreamer/app/src/main/res/layout/: activity_splash.xml  activity_streaming_configuration.xml  list_element.xml
AndroidStudio/CameraStreamer/app/src/main/res/values/: strings.xml
AndroidStudio/CameraStreamer/gradle/wrapper/: gradle-wrapper.properties
cpp/cmake/: detect_ffmpeg.cmake
cpp/cmake/cmake-modules/: Findavcodec.cmake  Findavdevice.cmake  Findavfilter.cmake  Findavformat.cmake  Findavutil.cmake  Findpostproc.cmake  Findswresample.cmake  Findswscale.cmake
cpp/cmake/libs/: libavcodec.cmake  libavdevice.cmake  libavfilter.cmake  libavformat.cmake  libavutil.cmake  libpostproc.cmake  libswresample.cmake  libswscale.cmake  template.in
cpp/src/clear-shm/: CMakeLists.txt  main.cpp
cpp/src/clear_shm/: CMakeLists.txt  main.cpp
cpp/src/debug-console/: CMakeLists.txt  main.cpp
cpp/src/debug_console/: CMakeLists.txt
cpp/src/ipc-dshow-source/: ARibeiroSourceDevice.cpp  ARibeiroSourceDevice.h  CMakeLists.txt  define_GUIDs.cpp  dllmain.cpp  ipc_dshow_source.rc
cpp/src/ipc-dshow-source/dshowdeps/lib/x64/: strmbase.lib
cpp/src/ipc-dshow-source/resources/: register_dll.ps1
cpp/src/ipc-syphon-source/: CMakeLists.txt
cpp/src/ipc-syphon-source/Syphon5/Syphon.framework/Versions/A/Resources/: Info.plist
cpp/src/ipc-syphon-source/src/: GLTexture.h  GLTexture.mm  MipMapGenerator.h  MipMapGenerator.mm  PlatformGL.h  PlatformGL.mm  YUV2RGB.h  main.mm
cpp/src/ipc-v4l2loopback-source/: CMakeLists.txt  README.md  main.cpp  v4l2.cpp  v4l2.h
cpp/src/ipc-v4l2loopback-source/scripts/: install_ubuntu.sh  uninstall_ubuntu.sh
cpp/src/ipc-v4l2loopback-source/scripts/etc/modprobe.d/: OpenMultimedia_v4l2loopback.conf
cpp/src/ipc_dshow_source/: ARibeiroSourceDevice.cpp  ARibeiroSourceDevice.h  CMakeLists.txt  dllmain.cpp  ipc_dshow_source.def  resource.h
cpp/src/ipc_dshow_source/dshowdeps/: README.md
cpp/src/ipc_dshow_source/dshowdeps/lib/x86/: strmbase.lib
cpp/src/ipc_dshow_source/resources/: unregister_dll.ps1
cpp/src/ipc_syphon_source/Syphon5/: LICENSE  Syphon SDK Read Me.rtf
cpp/src/ipc_syphon_source/Syphon5/Syphon.framework/Versions/A/: Syphon
cpp/src/ipc_syphon_source/Syphon5/Syphon.framework/Versions/A/_CodeSignature/: CodeResources
cpp/src/ipc_syphon_source/src/: GLTexture.h  GLTexture.mm  MipMapGenerator.mm  PlatformGL.h  PlatformGL.mm  YUV2RGB.h  main.mm
cpp/src/ipc_v4l2loopback_source/: CMakeLists.txt  README.md  main.cpp  v4l2.cpp  v4l2.h
cpp/src/ipc_v4l2loopback_source/scripts/: enable_for_chrome.sh  install_ubuntu.sh
cpp/src/network-to-ipc/: CMakeLists.txt  NetworkImageReceiver.h  colorspace_ops.h  main.cpp
cpp/src/network-to-ipc/resources/: network_to_ipc_ip.bat
cpp/src/network_to_ipc/: CMakeLists.txt  NetworkImageReceiver.h  colorspace_ops.h  main.cpp
cpp/src/v4l2-to-network/: CMakeLists.txt  NetworkDiscovery.h  NetworkTCPServer.h  main.cpp  v4l2.cpp  v4l2.h
cpp/src/v4l2_to_network/: CMakeLists.txt  NetworkDiscovery.h  NetworkTCPServer.h  main.cpp  v4l2.cpp  v4l2.h
cpp/wrappers/ffmpeg-wrapper/: CMakeLists.txt  FFmpegADTSMuxer.cpp  FFmpegADTSMuxer.h  FFmpegAudioEncoder.cpp  FFmpegAudioEncoder.h  FFmpegAudioFrameConverter.cpp  FFmpegAudioFrameConverter.h  FFmpegBitstreamFilterADTStoASC.cpp  FFmpegBitstreamFilterADTStoASC.h  FFmpegCommon.cpp  FFmpegCommon.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  H264Utils.cpp  H264Utils.h  ffmpeg-wrapper.h.in
cpp/wrappers/ffmpeg-wrapper/include/ffmpeg-wrapper/: FFmpegADTSMuxer.h  FFmpegAudioEncoder.h  FFmpegAudioFrameConverter.h  FFmpegBitstreamFilterADTStoASC.h  FFmpegCommon.h  FFmpegVideoDecoder.h  H264Utils.h  ffmpeg-wrapper.h
cpp/wrappers/ffmpeg-wrapper/src/: FFmpegADTSMuxer.cpp  FFmpegAudioEncoder.cpp  FFmpegAudioFrameConverter.cpp  FFmpegBitstreamFilterADTStoASC.cpp  FFmpegCommon.cpp  FFmpegVideoDecoder.cpp  H264Utils.cpp
